# AsteriaMind

./: README.md  push_to_github.ps1  pyproject.toml
assets/: README_v3.1_archive.md  architecture.mermaid
assets/diagrams/: bounded_oscillation.md
docs/: EXPERIMENT_LOG.md  WHY_HIVEMIND_FAILED.md
experiments/data/: co2_mauna_loa.csv  dream_v2_test.json
experiments/exp05_beta_validation/: summary.json
experiments/exp05b_beta_favorable/: summary.json
experiments/exp06_four_module_validation/: summary.json
experiments/exp06b_four_module_favorable/: summary.json
experiments/exp07_distillation_validation/: distilled_model.json  summary.json
experiments/exp08_five_module_curiosity/: distilled_model.json  summary.json
experiments/exp10_checkpoint_compare/: comparison.json  summary_warm.json
experiments/exp11_sensor_fault/: comparison.json  summary.json
src/: asteriamind.db  asteriamind.db-shm  asteriamind.db-wal  asteriamind.py  asteriamind_daemon.py  asteriamind_web.py  bench_autonomous.py  bench_autosearch.py  bench_dream.py  bench_function.py  bench_guard.py  bench_integration.py  bench_learn_calc.py  bench_math.py  bench_mother.py  bench_multisensor.py  bench_portal.py  bench_scale.py  bench_scale_jump.py  bench_spike.py  bench_triple_layer.py  bench_v2.py  bench_websearch.py  fault_test.py  kg_snapshot_latest.json  runner.py  test1_exploration.py  test2_budget.py  test3_evolution.py  test4_interference.py  websearch_bridge.py
src/AsteriaMind/: __init__.py  active_learner.py  argument.py  budget_contest.py  certainty_audit.py  cognitive_evolution.py  (+32 more)
(+20 files in other folders)
