[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hivemind"
version = "0.3.0"
description = "Energy-economy-based multi-module competitive inference system (v0.3: four-module architecture)"
requires-python = ">=3.10"

[project.optional-dependencies]
viz = ["matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hivemind = ["*.py"]
